hw - 8th lesson; second attempt